# SDR

./: .dockerignore  .gitignore  Cargo.toml  GAP_ELIMINATION_PLAN.md  README.md  docker-compose.yml  instruction-of-progress.md
.github/workflows/: ci.yml  hil.yml
control-plane/: Cargo.toml
control-plane/src/: ingest.rs  lib.rs  live.rs  main.rs  metrics.rs  rules.rs  store.rs  subscriber.rs  tls.rs
control-plane/tests/: hil.rs  sim_pipeline.rs
data/telemetry.db/: db
dsp-core/: README.md
dsp-core/docker/: Dockerfile.gnuradio
dsp-core/flowgraphs/: README.md
dsp-core/scripts/: inject_zmq.py  run_sim.sh
edge-gateway/: Cargo.toml
edge-gateway/src/: main.rs  metrics.rs  uart.rs  zmq_pub.rs
firmware/: HARDWARE_CAPABILITIES.md
firmware/esp32-tx-node/: Cargo.toml  build.rs
firmware/esp32-tx-node/.cargo/: config.toml
firmware/esp32-tx-node/src/: espnow_setup.rs  mac.rs  main.rs
firmware/esp32s3-gateway/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/esp32s3-gateway/.cargo/: config.toml
firmware/esp32s3-gateway/src/: main.rs
firmware/software-sim/: Cargo.toml
firmware/software-sim/src/: gateway.rs  lib.rs
hil-simulator/: Cargo.toml
hil-simulator/src/: api.rs  gwbackend.rs  lib.rs  main.rs  state.rs
hil-simulator/src/sim/: gateway.rs  mod.rs  ook.rs  pipeline.rs
infrastructure/: Dockerfile.control-plane  Dockerfile.edge-gateway  Dockerfile.hil-simulator
protocol/: Cargo.toml
protocol/src/: frame.rs  gwlink.rs  lib.rs  replay.rs
scripts/: flash_gw.sh  flash_helpers.sh  flash_tx.sh  pipelinectl.py  provision_demo.sh  provision_full_flow.sh  random_assign.sh  run_hil_dashboard.sh  run_live_dashboard.sh  run_local.sh  sim_node.py  start_hil_api.sh  up.sh
tests/: gateway_commands.robot  generate_test_certs.sh  software_sim_client.py  software_sim_sidecar.robot
web/hil-dashboard/: .env.local  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
web/hil-dashboard/scripts/: dev.mjs
web/hil-dashboard/src/app/: globals.css  layout.tsx  page.tsx
web/hil-dashboard/src/app/about/: page.tsx
web/hil-dashboard/src/app/api/control/[...path]/: route.ts
web/hil-dashboard/src/app/api/control/status/: route.ts
web/hil-dashboard/src/app/api/control/switch/: route.ts
web/hil-dashboard/src/app/api/v1/firmware/config/: route.ts
web/hil-dashboard/src/app/api/v1/live/[...path]/: route.ts
web/hil-dashboard/src/app/gateway/: page.tsx
web/hil-dashboard/src/components/: BitCompare.tsx  GatewayPanel.tsx  HilDashboard.tsx  LiveHardwarePanel.tsx  NavBar.tsx  PipelineFlow.tsx  PipelineSwitch.tsx  WaveformPanel.tsx
web/hil-dashboard/src/lib/: api.ts  ctlProxy.ts  i18n.ts  types.ts
