[workspace]
resolver = "2"
members = [
    "protocol",
    "firmware/esp32-tx-node",
    "firmware/esp32s3-gateway",
    "edge-gateway",
    "control-plane",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dennis Lee <dennis@example.com>"]
rust-version = "1.85"

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0", default-features = false }

# CRC
crc16 = { version = "0.1", default-features = false }
crc32fast = { version = "1.3", default-features = false }

# COBS framing
cobs = { version = "0.2", default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"

# Async
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "macros"] }
tokio-serial = "5.5"

# ZMQ
zmq = "0.9"

# Metrics
prometheus = "0.13"
axum = "0.7"
sled = "0.34"

# ESP-IDF (firmware only)
esp-idf-svc = { version = "0.49", features = ["std", "wifi"] }
esp-idf-hal = "0.46"
esp-idf-sys = { version = "0.37", features = ["binstart"] }

# Testing
tempfile = { version = "3.10", dev = true }