[package]
name = "control-plane"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Control Plane - Telemetry Processing & Rules Engine"

[lib]
name = "control_plane"
path = "src/lib.rs"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
postcard = { workspace = true, features = ["alloc"] }
anyhow = { workspace = true }
tokio = { workspace = true }
zmq = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
sled = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serialport = "4.9"