[package]
name = "protocol"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Shared protocol definitions for ESP-NOW telemetry"

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
postcard = { workspace = true, default-features = false, features = ["alloc"] }
crc = { workspace = true, default-features = false }
cobs = { workspace = true, default-features = false }
heapless = "0.8"

[dev-dependencies]
anyhow = { workspace = true }