[package]
name = "esp32-tx-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "ESP32 TX Node - ESP-NOW Boolean Command Sender"

[dependencies]
protocol = { path = "../../protocol", default-features = false }
esp-idf-svc = { workspace = true }
esp-idf-hal = { workspace = true }
esp-idf-sys = { workspace = true }
anyhow = { workspace = true }
postcard = { workspace = true, default-features = false, features = ["alloc"] }
crc16 = { workspace = true }
cobs = { workspace = true }
heapless = "0.8"
log = "0.4"

[build-dependencies]
esp-idf-svc = { workspace = true }