[package]
name = "esp32-tx-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "ESP32 TX Node - ESP-NOW Boolean Command Sender"

[dependencies]
protocol = { path = "../../protocol", default-features = false }
esp-idf-svc = { workspace = true }
heapless = "0.8"
log = "0.4"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
