[package]
name = "esp32s3-gateway"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "ESP32-S3 Gateway - ESP-NOW Receiver + UART Bridge"

[dependencies]
protocol = { path = "../../protocol", default-features = false }
esp-idf-svc = { workspace = true }
heapless = "0.8"
log = "0.4"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
