[package]
name = "firmware-software-sim"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "Software-sim helpers for firmware-facing frame and control encoding"

[dependencies]
anyhow = { workspace = true }
protocol = { path = "../../protocol" }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = "1.0"
